tests/fail/net4.rs
use net_macros::net4;

fn main() {
    let a = net4!("192.168.1.1/300");
}
